# sensifai_python

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
sensifai/: __init__.py  client.py  exceptions.py  payloads.py  responses.py  rest.py
sensifai_python/: rest.py  utils.py
