[metadata]
name = Sensifai
version = attr: sensifai.__version__
url = https://sensifai.com/
author = Sensifai Development Team
author_email = r.y.zadeh@sensifai.com
description = Sensifai Python SDK for Image and Video Processing.
license = apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Sensifai, AI, Video Recognition
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Video
project_urls =
    Documentation = https://developer.sensifai.com/sdk/python/
    Source = https://github.com/sensifai/sensifai_python/

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    requests
